<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/teal_700"
    tools:context=".Signup">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/lavender_border"
            android:orientation="vertical"
            android:padding="24dp">

            <TextView
                android:id="@+id/text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sign_up"
                android:textAlignment="center"
                android:textColor="@color/lavender"
                android:textSize="36sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/signup_email"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="40dp"
                android:background="@drawable/lavender_border"
                android:inputType="text"
                android:drawablePadding="8dp"
                android:hint="@string/enter_your_email"
                android:maxLines="1"
                android:padding="8dp"
                android:textColor="@color/lavender"
                android:textStyle="italic" />

            <EditText
                android:id="@+id/signup_password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/lavender_border"
                android:drawablePadding="8dp"
                android:hint="@string/enter_your_password"
                android:inputType="text"
                android:maxLines="1"
                android:padding="8dp"
                android:password="true"
                android:textColor="@color/lavender"
                android:textStyle="italic" />

            <EditText
                android:id="@+id/signup_password2"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/lavender_border"
                android:drawablePadding="8dp"
                android:hint="@string/re_enter_your_password"
                android:inputType="text"
                android:maxLines="1"
                android:padding="8dp"
                android:password="true"
                android:textColor="@color/lavender"
                android:textStyle="italic" />

            <Button
                android:id="@+id/signup_signupbtn"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="30dp"
                android:text="@string/sign_up"
                android:textSize="18sp"
                app:cornerRadius="20dp" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>