<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/teal_700"
    tools:context=".Login">

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="157dp"
        android:layout_height="52dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="200dp"
        android:gravity=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/lavender_border"
            android:orientation="vertical"
            android:padding="24dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:textAlignment="center"
                android:textColor="@color/lavender"
                android:textSize="36sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/login_email"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="40dp"
                android:background="@drawable/lavender_border"
                android:drawablePadding="8dp"
                android:hint="@string/enter_your_email"
                android:maxLines="1"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:inputType="text"
                android:textColor="@color/lavender"
                android:textStyle="italic" />

            <EditText
                android:id="@+id/login_password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/lavender_border"
                android:drawablePadding="8dp"
                android:hint="@string/enter_your_password"
                android:maxLines="1"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:inputType="text"
                android:password="true"
                android:textColor="@color/lavender"
                android:textStyle="italic" />

            <Button
                android:id="@+id/login_loginbtn"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="30dp"
                android:text="@string/login"
                android:textSize="18sp"
                app:cornerRadius="20dp" />

            <Button
                android:id="@+id/login_createemail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"

                android:background="@color/transparent"
                android:text="@string/create_new_email"
                android:textColor="@color/black" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>